@@ -12,6 +12,7 @@ release_tests  = 1
 installer      = Author::Plicease::MakeMaker
 test2_v0       = 1
 irc            = irc://irc.perl.org/#native
+diag = +Alien::nragent
 
 [RemovePrereqs]
 remove = strict
@@ -20,9 +21,7 @@ remove = base
 remove = Exporter
 remove = Carp
 remove = Time::HiRes
-
-;[Prereqs]
-;Foo::Bar = 0
+remove = Alien::nragent
 
 [Author::Plicease::Upload]
 cpan = 1
