@@ -3,8 +3,9 @@ package NewRelic::Agent::FFI;
 use strict;
 use warnings;
 use 5.008001;
-use FFI::Platypus;
+use FFI::Platypus 0.56;
 use Alien::nragent;
+use FFI::CheckLib ();
 
 # ABSTRACT: Perl Agent for NewRelic APM
 # VERSION
@@ -143,7 +144,16 @@ sub new
 }
 
 my $ffi = FFI::Platypus->new;
-$ffi->lib(Alien::nragent->dynamic_libs);
+$ffi->lib(sub {
+  my @find_lib_args = (
+    lib => [ qw(newrelic-collector-client newrelic-common newrelic-transaction) ]
+  );
+  push @find_lib_args, libpath => ['/opt/newrelic/lib/'] if -d '/opt/newrelic/lib/';
+  my @system = FFI::CheckLib::find_lib(@find_lib_args);
+  return @system if @system;
+  require Alien::nragent;
+  Alien::nragent->dynamic_libs;
+});
 my $newrelic_basic_literal_replacement_obfuscator = $ffi->find_symbol('newrelic_basic_literal_replacement_obfuscator');
 
 =head1 METHODS
