@@ -1,6 +1,7 @@
 Revision history for {{$dist->name}}
 
 {{$NEXT}}
+  - Only use Alien::nragent as fallback if the libs aren't already installed
 
 0.02      2018-08-23 11:40:34 -0400
   - Added tests and fixed a number of bugs that they uncovered
